Agrege foto perfil

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="tefa zapata naranjo">
+                    <img class="img-responsive" src="img/perfil.png" alt="tefa zapata naranjo">
                     <div class="intro-text">
                         <span class="name">Start Bootstrap</span>
                         <hr class="star-light">
