--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/perfil.png" alt="tefa zapata naranjo">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Fronted Developer</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Web Developer - Design Interfaces - Google Adwords</span>
                     </div>
                 </div>
             </div>
