--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Blog</a>
+                        <a href="https://medium.com/@tefalife">Blog</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -166,7 +166,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-offset-2">
-                    <p>Hola mi nombre es Stefany soy Freelancer, me dedico a la creación de desarrollo y diseño para la web, trabajo con herramientas para buen flujo de trabajo y tengo conocimientos de Google adwords que es practicamente la públicidad digital online pagada por clic.</p>
+                    <p>Hola mi nombre es Stefany, me dedico a la creación de desarrollo y diseño web, trabajo con herramientas de buen flujo de trabajo y tengo conocimientos de Google adwords que es públicidad digital online pagada por clic.</p>
                 </div>
                 <!-- <div class="col-lg-4">
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
