--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
+                                <a href="http://www.postresouffle.com/home.php"></a>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/souffle.png" class="img-responsive" alt="Postres Souffle">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
