edicion de about

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-offset-2">
-                    <p>Hola mi nombre es Stefany, me dedico a la creación de desarrollo y diseño web, trabajo con herramientas de buen flujo de trabajo y tengo conocimientos de Google adwords que es públicidad digital online pagada por clic.</p>
+                    <p>Hola mi nombre es Stefany, me dedico a la creación de desarrollo y diseño web, trabajo con herramientas de buen flujo de trabajo como Git-Github, responsive design workflow, conocimientos de frameworks de diseño css y desarrollo en el lado de javascript con react.js(vistas). En el lado del Marketing tengo conocimientos de Google adwords que es públicidad digital online pagada por clic.</p>
                 </div>
                 <!-- <div class="col-lg-4">
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
