anexo de img y url smashbross

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                        <a href="http://tefasmile.github.io/smashbross/">
+                        <img src="img/portfolio/smash.png" class="img-responsive" alt="Smash Bross">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
