anexo de img sofotipy y url

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <a href="http://tefasmile.github.io/sfotipy_fronted/">
+                        <img src="img/portfolio/sfotipy.png" class="img-responsive" alt="Sfotipy">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
