anexo 2pantalla web-design tophits sfotipy

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                        <a href="http://tefasmile.github.io/sfotipy_fronted/tophits.html">
+                        <img src="img/portfolio/sfotipy2.png" class="img-responsive" alt="top hits">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
