anexo img y url patron menu-offcanvas

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
+                        <a href="http://tefasmile.github.io/Menu-offcanvas/">
+                        <img src="img/portfolio/menu.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
